# tafelwerk

./: Cargo.toml  README.md
examples/: basketball.rs
src/: algorithms.rs  lib.rs  ndarray.rs
src/algorithms/: linalg.rs  mod.rs  numerical.rs  root.rs
src/array/: mod.rs
