[package]
name = "tafelwerk"
version = "0.1.0"
edition = "2021"
authors = ["Luca Lewin <contact@lucalewin.dev>"]
description = "physics / chemisty simulator"
license = "MIT OR Apache-2.0"
homepage = "https://lucalewin.dev/projects/tafelwerk"
documentation = "https://lucalewin.dev/docs/tafelwerk"
repository = "https://github.com/lucalewin/tafelwerk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
measurement = "0.1"
