[package]
name = "tafelwerk"
version = "0.2.0-alpha"
edition = "2021"
authors = ["Luca Lewin <contact@lucalewin.dev>"]
description = "collection of math, physics and chemisty related crates/functions"
license = "MIT OR Apache-2.0"
homepage = "https://lucalewin.dev/projects/tafelwerk"
documentation = "https://lucalewin.dev/projects/tafelwerk/docs"
repository = "https://github.com/lucalewin/tafelwerk"
